--- a/templates/register.html
+++ b/templates/register.html
@@ -12,7 +12,7 @@
     </style>
   </head>
   <body>
-    <img src="img/logo.jpg" alt="logo" style="float:right;width:400px;height:400px;">
+    <img src="/img/logo.jpg" alt="logo" style="float:right;width:400px;height:400px;">
     <h1>Register Identifier and Hex Key</h1>
     <form action="{{ url_for('register') }}" method="post">
       Identifier: <input type="text" name="identifier"><br>
