--- a/templates/register.html
+++ b/templates/register.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <title>Registration Form</title>
+    <style>
+      body {
+       background-color: black;
+       color: white;
+      }
+    </style>
   </head>
   <body>
     <img src="img/logo.png" alt="your_image" style="float:center;width:400px;height:400px;">
