--- a/templates/display.html
+++ b/templates/display.html
@@ -22,8 +22,11 @@
   </head>
   <body>
     <p><center>
-     Your NIP-05 Identifier has be successfully created.
-     To use it, put it into the respective NIP-05 identifier field on the profile in your favourite nostr client.
+      <img src="{{ url_for('static', filename='logo.png') }} " alt="logo" style="float:center;width:400px;height:400px;">
+      <br>
+      <br>
+       Your NIP-05 Identifier has be successfully created.
+       To use it, put it into the respective NIP-05 identifier field on the profile in your favourite nostr client.
       <br>
       <br>
       </center>
@@ -48,7 +51,7 @@
       <center>
         If you like our work, feel free to donate some sats.
         <br>
-        <img src="{{ url_for('static', filename='LNURLp_donation.png') }}">
+        <img src="{{ url_for('static', filename='LNURLp_donation.png') }} alt="donations" style="float:center;width:400px;height:400px;">
         <br>
         Thanks for your support!
       </center>
