--- a/templates/register.html
+++ b/templates/register.html
@@ -20,6 +20,7 @@
     </style>
   </head>
   <body>
+    <center>
     <img src="{{ url_for('static', filename='logo.png') }} " alt="logo" style="float:center;width:400px;height:400px;">
     <h2>Register your NIP-05 identifier with your hex format public key:</h2>
     <form method="post">
@@ -37,6 +38,9 @@
             <td></td>
         </tr>  
       </table>
-    </form> 
+    </form>
+    </center>
+  </body>
+  
   </body>
 </html>
