--- a/templates/display.html
+++ b/templates/display.html
@@ -51,7 +51,7 @@
       <center>
         If you like our work, feel free to donate some sats.
         <br>
-        <img src="{{ url_for('static', filename='LNURLp_donations.png') }} alt="donations" style="float:center;width:400px;height:400px;">
+        <img src="{{ url_for('static', filename='LNURLp_donations.png') }}" alt="donations" style="float:center;width:400px;height:400px;">
         <br>
         Thanks for your support!
       </center>
