--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
   </head>
   <body>
     <div class="top-frame">
-      <img src="{{ url_for('static', filename='logo.png' }}" width="300" height="300" />
+      <img src="{{ url_for('static', filename='logo.png') }}" width="300" height="300" />
       <br /><br /><br />
       <table>
         <tr>
