--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
         <tr>
           <td><button onclick="parent.bottom-frame.location='home.html'">HOME</button></td>
           <td><button onclick="parent.bottom-frame.location='info.html'">INFO</button></td>
-          <td><button onclick="parent.bottom-frame.location='https://nostr.lnadresse.de/register'">REGISTER</button></td>
+          <td><button onclick="parent.bottom-frame.location='{{ url_for('register') }}'">REGISTER</button></td>
         </tr>
       </table>
     </div>
