--- a/templates/index.html
+++ b/templates/index.html
@@ -44,8 +44,8 @@
       <br><br><br>
       <table>
         <tr>
-          <td><button onclick="parent.bottom-frame.location='{{ url_for('home.html') }}'">HOME</button></td>
-          <td><button onclick="parent.bottom-frame.location='{{ url_for('info.html') }}'">INFO</button></td>
+          <td><button onclick="parent.bottom-frame.location='{{ url_for('home') }}'">HOME</button></td>
+          <td><button onclick="parent.bottom-frame.location='{{ url_for('info') }}'">INFO</button></td>
           <td><button onclick="parent.bottom-frame.location='{{ url_for('register') }}'">REGISTER</button></td>
         </tr>
       </table>
