--- a/templates/list.html
+++ b/templates/list.html
@@ -25,8 +25,8 @@
     <center>
     <table>
             <tr>
-                <th>Identifier</th>
-                <th>Hex Key</th>
+                <th>Profile Name</th>
+                <th>Hex Pub Key</th>
                 <th>NIP-05 Identifier</th>
             </tr>
             {% for name in names %}
