--- a/templates/index.html
+++ b/templates/index.html
@@ -44,9 +44,9 @@
       <br><br><br>
       <table>
         <tr>
-          <td><button onclick="parent.bottom-frame.location='{{ url_for('home') }}'">HOME</button></td>
-          <td><button onclick="parent.bottom-frame.location='{{ url_for('info') }}'">INFO</button></td>
-          <td><button onclick="parent.bottom-frame.location='{{ url_for('register') }}'">REGISTER</button></td>
+          <td><button onclick="parent.bottom-frame.location='/home'">HOME</button></td>
+          <td><button onclick="parent.bottom-frame.location='/info'">INFO</button></td>
+          <td><button onclick="parent.bottom-frame.location='/register'">REGISTER</button></td>
         </tr>
       </table>
       </center>
