--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
 
       .top-frame {
         height: 400px;
+        width: 80%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -15,6 +16,7 @@
       
       .bottom-frame {
         height: 600px;
+        width: 80%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -52,6 +54,10 @@
       </table>
       </center>
     </div>
+    <div class="bottom-frame">
+    <center>
     <iframe name="bottom-frame" frameborder="0"></iframe>
+    </center>
+    </div>
   </body>
 </html>
