--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
     </div>
     <div class="bottom-frame">
     <center>
-    <iframe name="bottom-frame" frameborder="0"></iframe>
+    <iframe name="bottom-frame" frameborder="0" width="80%" height="600px"></iframe>
     </center>
     </div>
   </body>
