--- a/templates/info.html
+++ b/templates/info.html
@@ -1,1 +1,45 @@
-<p>Info</p>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Nostr Data</title>
+    <style>
+        body {
+            background-color: black;
+            color: white;
+            text-align: justify;
+            
+        }
+        table {
+            width: 100%;
+            text-align: center;
+        }
+        th, td {
+            border: 1px solid white;
+            padding: 10px;
+        }
+        th {
+            background-color: gray;
+        }
+    </style>
+</head>
+<body>
+  <p >
+Nostr is a decentralized, open-source project that provides a way for users to map human-readable names to addresses on the Bitcoin blockchain. 
+The goal of Nostr is to provide an easy-to-use and secure way to access, store, and share information across the web without relying on a 
+central authority. Nostr is based on decentralized relays, which share the information, which users put into the network with various clients, 
+with each other. In this way a network is generated which has no single point of failure and information cannot be lost or suppressed by disabling
+a single central entity. Nostr ist based on a pair cryptographic keys to identify a unique participant. The public key is used to connect to other
+participants of the nostr network, the private key is used to sign and verify the origin of informations which a participant broadcasts to the network.
+<br><br><br>    
+The Nostr NIP-05 identifier is a naming and addressing scheme in order ro proved a more human-readable form of the public key.
+The identifier is used to identify a unique account or entity on the blockchain and is a unique string of characters which 
+resembles the format of an email address.
+The NIP-05 specification defines the format of the identifier and provides guidelines for how it can be used in decentralized 
+applications. <br><br>The nostr.json file is a file that is used to store the association between the NIP-05 identifier and the hex key, 
+which is a unique identifier for the entity. The file is used to associate the entity with its NIP-05 identifier, making it 
+easier for other entities to interact with it.<br><br><br>
+This website offers the registration of a free NIP-05 identifier with the domain @nostr.lnadresse.de<br><br>
+To register your NIP-05 identifier, please select the registration form with the button above, enter your nostr Profile Name and your Pub Key in Hex format.
+  </p>
+</body>
