--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,12 @@
         color: white;
       }
 
+      iframe {
+        width: 80%;
+      }
+      
       .top-frame {
-        height: 400px;
+        height: 250px;
         width: 80%;
         display: flex;
         justify-content: center;
@@ -15,7 +19,7 @@
       }
       
       .bottom-frame {
-        height: 600px;
+        height: 774px;
         width: 80%;
         display: flex;
         justify-content: center;
@@ -43,8 +47,7 @@
   <body>
     <div class="top-frame">
       <center>
-      <img src="{{ url_for('static', filename='logo.png') }}" width="300" height="300" />
-      <br><br><br>
+      <img src="{{ url_for('static', filename='logo.png') }}" width="250" height="250" />
       <table>
         <tr>
           <td><button onclick="window.frames['bottom-frame'].location='{{ url_for('home') }}'">HOME</button></td>
@@ -56,7 +59,7 @@
     </div>
     <div class="bottom-frame">
     <center>
-    <iframe name="bottom-frame" frameborder="0" width="80%" height="600px"></iframe>
+    <iframe name="bottom-frame" frameborder="0"></iframe>
     </center>
     </div>
   </body>
