--- a/templates/info.html
+++ b/templates/info.html
@@ -25,13 +25,7 @@
 </head>
 <body>
   <p >
-Nostr is a decentralized, open-source project that provides a way for users to map human-readable names to addresses on the Bitcoin blockchain. 
-The goal of Nostr is to provide an easy-to-use and secure way to access, store, and share information across the web without relying on a 
-central authority. Nostr is based on decentralized relays, which share the information, which users put into the network with various clients, 
-with each other. In this way a network is generated which has no single point of failure and information cannot be lost or suppressed by disabling
-a single central entity. Nostr ist based on a pair cryptographic keys to identify a unique participant. The public key is used to connect to other
-participants of the nostr network, the private key is used to sign and verify the origin of informations which a participant broadcasts to the network.
-<br><br><br>    
+    <h2>The nostr NIP-05 identifier</h2> 
 The Nostr NIP-05 identifier is a naming and addressing scheme in order ro proved a more human-readable form of the public key.
 The identifier is used to identify a unique account or entity on the blockchain and is a unique string of characters which 
 resembles the format of an email address.
