--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,35 @@
-<p>Home</p>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Nostr Data</title>
+    <style>
+        body {
+            background-color: black;
+            color: white;
+            text-align: justify;
+            
+        }
+        table {
+            width: 100%;
+            text-align: center;
+        }
+        th, td {
+            border: 1px solid white;
+            padding: 10px;
+        }
+        th {
+            background-color: gray;
+        }
+    </style>
+</head>
+<body>
+  <p >
+  <h2>What is nostr?</h2>
+  <br><br>
+Nostr is a decentralized, open-source project that provides a way for users to map human-readable names to addresses on the Bitcoin blockchain. 
+The goal of Nostr is to provide an easy-to-use and secure way to access, store, and share information across the web without relying on a 
+central authority. Nostr is based on decentralized relays, which share the information, which users put into the network with various clients, 
+with each other. In this way a network is generated which has no single point of failure and information cannot be lost or suppressed by disabling
+a single central entity. Nostr ist based on a pair cryptographic keys to identify a unique participant. The public key is used to connect to other
+participants of the nostr network, the private key is used to sign and verify the origin of informations which a participant broadcasts to the network.
