--- a/templates/info.html
+++ b/templates/info.html
@@ -11,7 +11,7 @@
             
         }
         table {
-            width: 100%;
+            width: 80%;
             text-align: center;
         }
         th, td {
@@ -24,16 +24,22 @@
     </style>
 </head>
 <body>
-  <p >
-    <h2>The nostr NIP-05 identifier</h2> 
-The Nostr NIP-05 identifier is a naming and addressing scheme in order ro proved a more human-readable form of the public key.
-The identifier is used to identify a unique account or entity on the blockchain and is a unique string of characters which 
-resembles the format of an email address.
-The NIP-05 specification defines the format of the identifier and provides guidelines for how it can be used in decentralized 
-applications. <br><br>The nostr.json file is a file that is used to store the association between the NIP-05 identifier and the hex key, 
-which is a unique identifier for the entity. The file is used to associate the entity with its NIP-05 identifier, making it 
-easier for other entities to interact with it.<br><br><br>
-This website offers the registration of a free NIP-05 identifier with the domain @nostr.lnadresse.de<br><br>
-To register your NIP-05 identifier, please select the registration form with the button above, enter your nostr Profile Name and your Pub Key in Hex format.
-  </p>
+  <p>
+  <center>
+  <table>
+      <tr><h2>The nostr NIP-05 identifier</h2> 
+      <br><br>
+      </tr>
+      <tr>The Nostr NIP-05 identifier is a naming and addressing scheme in order ro proved a more human-readable form of the public key.
+          The identifier is used to identify a unique account or entity on the blockchain and is a unique string of characters which 
+          resembles the format of an email address.
+          The NIP-05 specification defines the format of the identifier and provides guidelines for how it can be used in decentralized 
+          applications. <br><br>The nostr.json file is a file that is used to store the association between the NIP-05 identifier and the hex key, 
+          which is a unique identifier for the entity. The file is used to associate the entity with its NIP-05 identifier, making it 
+          easier for other entities to interact with it.<br><br><br>
+          This website offers the registration of a free NIP-05 identifier with the domain @nostr.lnadresse.de<br><br>
+          To register your NIP-05 identifier, please select the registration form with the button above, enter your nostr Profile Name and your Pub Key in Hex format.
+      </tr>
+      </center>
+      </p>
 </body>
