--- a/templates/info.html
+++ b/templates/info.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Nostr Data</title>
+    <title>nostr NIP-05 Indentifier Info</title>
     <style>
         body {
             background-color: black;
@@ -12,24 +12,24 @@
         }
         table {
             width: 80%;
-            text-align: center;
+            margin: 0 auto;
+            border: 1px solid black;
+            border-collapse: collapse;
         }
-        th, td {
-            border: 1px solid white;
+
+        td,tr {
+            border: 1px solid black;
             padding: 10px;
-        }
-        th {
-            background-color: gray;
+            text-align: center;
         }
     </style>
 </head>
 <body>
   <p>
   <center>
-  <table>
-      <tr><h2>The nostr NIP-05 identifier</h2> 
+  <h2>The nostr NIP-05 identifier</h2> 
       <br><br>
-      </tr>
+      <table>
       <tr>The Nostr NIP-05 identifier is a naming and addressing scheme in order ro proved a more human-readable form of the public key.
           The identifier is used to identify a unique account or entity on the blockchain and is a unique string of characters which 
           resembles the format of an email address.
