--- a/templates/home.html
+++ b/templates/home.html
@@ -12,24 +12,24 @@
         }
         table {
             width: 80%;
-            text-align: center;
+            margin: 0 auto;
+            border: 1px solid black;
+            border-collapse: collapse;
         }
-        th, td {
-            border: 1px solid white;
+
+        td,tr {
+            border: 1px solid black;
             padding: 10px;
-        }
-        th {
-            background-color: gray;
+            text-align: center;
         }
     </style>
 </head>
 <body>
-  <p >
+ <p >
   <center>
+  <h2>What is nostr?</h2>
+  <br><br>
   <table>
-  <tr><h2>What is nostr?</h2>
-      <br><br>
-  </tr>
   <tr>Nostr is a decentralized, open-source project that provides a way for users to map human-readable names to addresses on the Bitcoin blockchain. 
       The goal of Nostr is to provide an easy-to-use and secure way to access, store, and share information across the web without relying on a 
       central authority. Nostr is based on decentralized relays, which share the information, which users put into the network with various clients, 
@@ -38,6 +38,6 @@
       participants of the nostr network, the private key is used to sign and verify the origin of informations which a participant broadcasts to the network.
    </tr>
    </table>
-      </center>
-    </p>
+   </center>
+  </p>
  </body>
