--- a/templates/display.html
+++ b/templates/display.html
@@ -22,10 +22,7 @@
   </head>
   <body>
     <p><center>
-      <img src="{{ url_for('static', filename='logo.png') }} " alt="logo" style="float:center;width:400px;height:400px;">
-      <br>
-      <br>
-       Your NIP-05 Identifier has be successfully created.
+      <h2>Your NIP-05 Identifier has been successfully created.</h2>
       <br><br>
        To use it, put it into the respective NIP-05 identifier field on the profile in your favourite nostr client.
       <br>
@@ -52,7 +49,7 @@
       <center>
         If you like our work, feel free to donate some sats.
         <br><br><br>
-        <img src="{{ url_for('static', filename='LNURLp_donations.png') }}" alt="donations" style="float:center;width:300px;height:300px;">
+        <img src="{{ url_for('static', filename='LNURLp_donations.png') }}" alt="donations" style="float:center;width:200px;height:200px;">
         <br><br><br>
         Thanks for your support!
       </center>
