--- a/templates/info.html
+++ b/templates/info.html
@@ -12,6 +12,7 @@
         }
         table {
             width: 80%;
+            text-align: justify;
             margin: 0 auto;
             border: 1px solid black;
             border-collapse: collapse;
