--- a/templates/duplicate.html
+++ b/templates/duplicate.html
@@ -1,1 +1,36 @@
-"This Profile Name and Hex Pub Key is already registered."
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>nostr NIP-05 Indentifier Info</title>
+    <style>
+        body {
+            background-color: black;
+            color: white;
+            text-align: justify;
+            
+        }
+        table {
+            width: 80%;
+            text-align: justify;
+            margin: 0 auto;
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+
+        td,tr {
+            border: 1px solid black;
+            padding: 10px;
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
+  <p>
+  <h2>"This Profile Name and Hex Pub Key is already registered.</h2> 
+      <br><br>
+      <table>
+      <tr>A record with the given combination of Profile Name and Hex Pub Key was already existing in the nostr.json file. The registration was aborted.</tr>
+  </table>
+  </p>
+</body>
