--- a/templates/duplicate.html
+++ b/templates/duplicate.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>nostr NIP-05 Indentifier Info</title>
+    <title>Duplicate Entry</title>
     <style>
         body {
             background-color: black;
