--- a/templates/info.html
+++ b/templates/info.html
@@ -40,5 +40,6 @@
           This website offers the registration of a free NIP-05 identifier with the domain @nostr.lnadresse.de<br><br>
           To register your NIP-05 identifier, please select the registration form with the button above, enter your nostr Profile Name and your Pub Key in Hex format.
       </tr>
-      </p>
+    </table>
+   </p>
 </body>
