--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Nostr Data</title>
+    <title>What is Nostr?</title>
     <style>
         body {
             background-color: black;
@@ -27,7 +27,7 @@
 </head>
 <body>
  <p >
-  <h2>What is nostr?</h2>
+  <h2>What is Nostr?</h2>
   <br><br>
   <table>
   <tr>Nostr is a decentralized, open-source project that provides a way for users to map human-readable names to addresses on the Bitcoin blockchain. 
