--- a/templates/index.html
+++ b/templates/index.html
@@ -53,6 +53,6 @@
       </table>
       </center>
     </div>
-    <iframe name="bottom-frame" frameborder="0"></iframe>
+    <iframe name="bottom-frame" frameborder="0" src="{{ url_for('home') }}"></iframe>
   </body>
 </html>
