--- a/templates/info.html
+++ b/templates/info.html
@@ -8,7 +8,7 @@
             background-color: black;
             color: white;
             text-align: justify;
-            
+            align-items: center;
         }
         table {
             width: 80%;
