--- a/templates/info.html
+++ b/templates/info.html
@@ -27,9 +27,11 @@
 </head>
 <body>
   <p>
+  <center>
   <h2>The nostr NIP-05 identifier</h2> 
-      <br><br>
-      <table>
+  <br><br>
+  </center>
+      <table text-align="justify">
       <tr>The Nostr NIP-05 identifier is a naming and addressing scheme in order ro proved a more human-readable form of the public key.
           The identifier is used to identify a unique account or entity on the blockchain and is a unique string of characters which 
           resembles the format of an email address.
