--- a/templates/duplicate.html
+++ b/templates/duplicate.html
@@ -26,10 +26,11 @@
     </style>
 </head>
 <body>
-  <p>
+  <p><center>
   <h2>"This Profile Name and Hex Pub Key is already registered.</h2> 
       <br><br>
-      <table>
+      </center>
+      <table text-align="justify">
       <tr>A record with the given combination of Profile Name and Hex Pub Key was already existing in the nostr.json file. The registration was aborted.</tr>
   </table>
   </p>
