--- a/templates/duplicate.html
+++ b/templates/duplicate.html
@@ -27,11 +27,11 @@
 </head>
 <body>
   <p><center>
-  <h2>"This Profile Name and Hex Pub Key is already registered.</h2> 
+  <h2>This Profile Name and Hex Pub Key is already registered.</h2> 
       <br><br>
-      </center>
-      <table text-align="justify">
+      <table align="justify">
       <tr>A record with the given combination of Profile Name and Hex Pub Key was already existing in the nostr.json file. The registration was aborted.</tr>
   </table>
+  </center>
   </p>
 </body>
