--- a/templates/home.html
+++ b/templates/home.html
@@ -30,8 +30,7 @@
   <center>
   <h2>What is Nostr?</h2>
   <br><br>
-  </center>
-  <table text-align="justify">
+  <table align="justify">
   <tr>Nostr is a decentralized, open-source project that provides a way for users to map human-readable names to addresses on the Bitcoin blockchain. 
       The goal of Nostr is to provide an easy-to-use and secure way to access, store, and share information across the web without relying on a 
       central authority. Nostr is based on decentralized relays, which share the information, which users put into the network with various clients, 
@@ -40,5 +39,6 @@
       participants of the nostr network, the private key is used to sign and verify the origin of informations which a participant broadcasts to the network.
    </tr>
    </table>
+  </center>
   </p>
  </body>
