--- a/templates/info.html
+++ b/templates/info.html
@@ -30,8 +30,7 @@
   <center>
   <h2>The nostr NIP-05 identifier</h2> 
   <br><br>
-  </center>
-      <table text-align="justify">
+      <table align="justify">
       <tr>The Nostr NIP-05 identifier is a naming and addressing scheme in order ro proved a more human-readable form of the public key.
           The identifier is used to identify a unique account or entity on the blockchain and is a unique string of characters which 
           resembles the format of an email address.
@@ -43,5 +42,6 @@
           To register your NIP-05 identifier, please select the registration form with the button above, enter your nostr Profile Name and your Pub Key in Hex format.
       </tr>
     </table>
+   </center>
    </p>
 </body>
