--- a/templates/delete_input.html
+++ b/templates/delete_input.html
@@ -14,7 +14,7 @@
     <br><br>
     <p>{{ identifier }}: {{ hex_key }}</p>
     <br><br>
-    <form action="{{ url_for('delete_confirm') }}" method="post">
+    <form action="{{ url_for('confirm_delete') }}" method="post">
       <input type="hidden" name="identifier" value="{{ identifier }}">
       <input type="submit" value="Confirm Deletion">
     </form>
