--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='logo_url.ico') }}">
     <style>
       body {
         background-color: black;
