--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<html>
+n<html>
   <head>
     <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='logo_url.ico') }}">
     <style>
@@ -41,7 +41,7 @@
         height: 50px;
       }
 
-      {% if user_agent == 'mobile' %}
+      {% if version == 'mobile' %}
         /* Add styles specific to the mobile version */
         iframe {
           height: 500px;
