--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-n<html>
+<html>
   <head>
     <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='logo_url.ico') }}">
     <style>
@@ -52,7 +52,7 @@ n<html>
         }
 
         table {
-          font-size: 14px;
+          font-size: 20px;
         }
 
         td {
@@ -71,10 +71,13 @@ n<html>
       <center>
       <table>
         <tr>
-          <td><img src="{{ url_for('static', filename='logo.png') }}" width="250" height="250" /></td>
+          <tr><td><img src="{{ url_for('static', filename='logo.png') }}" width="250" height="250" /></td>
+        </tr>
+        <tr>
           <td><button onclick="window.frames['bottom-frame'].location='{{ url_for('home') }}'">HOME</button></td>
           <td><button onclick="window.frames['bottom-frame'].location='{{ url_for('info') }}'">INFO</button></td>
           <td><button onclick="window.frames['bottom-frame'].location='{{ url_for('register') }}'">REGISTER</button></td>
+        </tr>
         </tr>
       </table>
       </center>
