--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
         background-color: black;
         color: white;
         align-items: center;
+        font-family: Arial, sans-serif;
       }
 
       iframe {
@@ -16,6 +17,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        font-family: Arial, sans-serif;
       }
       
       .top-frame {
@@ -30,12 +32,13 @@
         margin: 0 auto;
         border: 1px solid black;
         border-collapse: collapse;
+        font-family: Arial, sans-serif;
       }
 
       td {
         border: 1px solid black;
         padding: 10px;
-        text-align: center;
+        text-align: justify;
       }
 
       button {
