--- a/templates/display.html
+++ b/templates/display.html
@@ -5,10 +5,12 @@
       body {
         background-color: black;
         color: white;
+        font-family: Arial, sans-serif;
       }
       table {
         width: 80%;
         border-collapse: collapse;
+        font-family: Arial, sans-serif;
       }
       th, td {
         border: 1px solid white;
