--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,7 @@
             color: white;
             text-align: justify;
             align-items: center;
+            font-family: Arial, sans-serif;
         }
         table {
             width: 80%;
@@ -16,12 +17,14 @@
             margin: 0 auto;
             border: 1px solid black;
             border-collapse: collapse;
+            font-family: Arial, sans-serif;
         }
 
         td,tr {
             border: 1px solid black;
             padding: 10px;
             text-align: center;
+            font-family: Arial, sans-serif;
         }
     </style>
 </head>
