--- a/templates/delete_input.html
+++ b/templates/delete_input.html
@@ -5,6 +5,7 @@
         background-color: black;
         color: white;
         text-align: center;
+        font-family: Arial, sans-serif;
       }
     </style>
   </head>
