--- a/templates/list.html
+++ b/templates/list.html
@@ -5,15 +5,18 @@
       body {
         background-color: black;
         color: white;
+        font-family: Arial, sans-serif;
       }
       table {
         width: 80%;
         border-collapse: collapse;
+        font-family: Arial, sans-serif;
       }
       th, td {
         border: 1px solid white;
         padding: 8px;
         text-align: left;
+        font-family: Arial, sans-serif;
       }
       th {
         background-color: grey;
