--- a/templates/info.html
+++ b/templates/info.html
@@ -36,7 +36,7 @@
   <h2>The nostr NIP-05 identifier</h2> 
   <br><br>
       <table align="justify">
-      <tr>The Nostr NIP-05 identifier is a naming and addressing scheme in order ro proved a more human-readable form of the public key.
+      <tr>The Nostr NIP-05 identifier is a naming and addressing scheme in order to provide a more human-readable form of the public key.
           The identifier is used to identify a unique account or entity on the blockchain and is a unique string of characters which 
           resembles the format of an email address.
           The NIP-05 specification defines the format of the identifier and provides guidelines for how it can be used in decentralized 
