--- a/templates/info.html
+++ b/templates/info.html
@@ -43,7 +43,7 @@
           applications. <br><br>The nostr.json file is a file that is used to store the association between the NIP-05 identifier and the hex key, 
           which is a unique identifier for the entity. The file is used to associate the entity with its NIP-05 identifier, making it 
           easier for other entities to interact with it.<br><br><br>
-          This website offers the registration of a free NIP-05 identifier with the domain @nostr.lnadresse.de<br><br>
+          This website offers the registration of a free NIP-05 identifier with the domain @nostrified.org .<br><br>
           To register your NIP-05 identifier, please select the registration form with the button above, enter your nostr Profile Name and your Pub Key in Hex format.
       </tr>
     </table>
