--- a/templates/delete_input.html
+++ b/templates/delete_input.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>Confirm Delete</title>
     <style>
       body {
         background-color: black;
@@ -10,14 +11,21 @@
     </style>
   </head>
   <body>
-    <br><br><br>
-    <h2>Confirm Deletion</h2>
-    <br><br>
-    <p>{{ identifier }}: {{ hex_key }}</p>
-    <br><br>
+    <h1>Confirm Delete</h1>
+    <table>
+      <tr>
+        <th>Identifier</th>
+        <th>Hex Key</th>
+      </tr>
+      <tr>
+        <td>{{ identifier }}</td>
+        <td>{{ hex_key }}</td>
+      </tr>
+    </table>
     <form action="{{ url_for('confirm_delete') }}" method="post">
-      <input type="hidden" name="identifier" value="{{ identifier }}">
-      <input type="submit" value="Confirm Deletion">
+      <input type="submit" value="Confirm">
     </form>
+    <p>Deletion successful!</p>
+    <a href="{{ url_for('index') }}">Go back to main page</a>
   </body>
 </html>
