--- a/templates/delete_input.html
+++ b/templates/delete_input.html
@@ -8,11 +8,24 @@
         text-align: center;
         font-family: Arial, sans-serif;
       }
+      table {
+        width: 80%;
+        border-collapse: collapse;
+        font-family: Arial, sans-serif;
+      }
+      th, td {
+        border: 1px solid white;
+        padding: 8px;
+        text-align: left;
+      }
+      th {
+        background-color: grey;
+      }
     </style>
   </head>
   <body>
     <h1>Confirm Delete</h1>
-    <table>
+    <table align="center">
       <tr>
         <th>Identifier</th>
         <th>Hex Key</th>
@@ -25,7 +38,5 @@
     <form action="{{ url_for('confirm_delete') }}" method="post">
       <input type="submit" value="Confirm">
     </form>
-    <p>Deletion successful!</p>
-    <a href="{{ url_for('index') }}">Go back to main page</a>
   </body>
 </html>
