--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -1,4 +1,4 @@
-<html>
+r<html>
   <head>
     <title>Confirm Delete</title>
     <style>
@@ -27,6 +27,6 @@
     <p>Entry successfully deleted.</p>
     <br><br>
     <form action="{{ url_for('confirm') }}" method="post">
-      <input type="submit" value="Confirm">
+      <input type="submit" value="Return to registration">
     </form>
   </body>
