--- a/templates/register.html
+++ b/templates/register.html
@@ -31,7 +31,7 @@
           <td><input type="text" id="identifier" name="identifier" size=50 required></td>
         </tr>
         <tr>
-          <td><label for="hex_key">Hex Pub Key:</label></td>
+          <td><label for="hex_key">Your Public Key (hex oder npub):</label></td>
           <td><input type="text" id="hex_key" name="hex_key" size=50 required></td>
         </tr>
           <tr>
