--- a/templates/test.html
+++ b/templates/test.html
@@ -4,20 +4,27 @@
     <meta name="description" content="Nostr is a platform utilizing cryptography and decentralized network technology to revolutionize social media. Join us in creating a new era of freedom and privacy online.">
     <meta name="keywords" content="Nostr, nostr, NIP-05, Bitcoin, Decentralized Social Media, Freedom, Privacy, cryptography, cypherpunks, identifier, public key, private key, key pair">
     <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='logo_url.ico') }}">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Nostr</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
   </head>
   <body>
-    <input type="checkbox" id="menu-toggle" />
-    <label for="menu-toggle" id="menu-icon">&#9776;</label>
-    <nav>
-      <ul>
-        <li><a href="{{ url_for('home') }}">HOME</a></li>
-        <li><a href="{{ url_for('info') }}">INFO</a></li>
-        <li><a href="{{ url_for('register') }}">REGISTER</a></li>
-      </ul>
-    </nav>
+    <div class="top-frame">
+      <center>
+        <img src="{{ url_for('static', filename='logo.png') }}" alt="Nostr logo" class="logo" />
+        <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+        <div class="menu">
+          <a href="{{ url_for('home') }}">HOME</a>
+          <a href="{{ url_for('info') }}">INFO</a>
+          <a href="{{ url_for('register') }}">REGISTER</a>
+        </div>
+      </center>
+    </div>
     <iframe name="bottom-frame" frameborder="0" src="{{ url_for('home') }}"></iframe>
+
+    <script>
+      function toggleMenu() {
+        const menu = document.querySelector('.menu');
+        menu.classList.toggle('open');
+      }
+    </script>
   </body>
 </html>
