--- a/templates/img/styles.css
+++ b/templates/img/styles.css
@@ -1,56 +1,71 @@
-/* General styles */
 body {
   background-color: black;
   color: white;
   align-items: center;
   font-family: Arial, sans-serif;
   margin: 0;
-  padding: 0;
 }
 
-/* Top frame styles */
 .top-frame {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  background-color: #222;
-  padding: 10px;
+  background-color: #333333;
+  height: 80px;
+  padding: 0 20px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
 }
 
 .logo {
   width: 100px;
-  height: auto;
+  height: 50px;
 }
 
-.menu-toggle {
+.menu-btn {
+  display: block;
+  width: 30px;
+  height: 20px;
+  border: none;
+  background-color: transparent;
+  background-image: url("menu-icon.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+}
+
+.nav-items {
+  display: none;
+  position: absolute;
+  top: 80px;
+  left: 0;
+  right: 0;
+  background-color: #333333;
+  z-index: 2;
+}
+
+.close-btn {
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 20px;
+  font-size: 30px;
   color: white;
-  font-size: 24px;
   background-color: transparent;
   border: none;
   cursor: pointer;
 }
 
-.menu {
-  display: none;
-  position: absolute;
-  top: 70px;
-  right: 10px;
-  background-color: #222;
-  padding: 10px;
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-.menu.open {
-  display: block;
-}
-
-.menu a {
-  display: block;
-  color: white;
-  text-decoration: none;
-  padding: 10px 0;
-  border-bottom: 1px solid white;
-}
-
-.menu a:last-of-type {
-  border-bottom: none;
-}
+li {
+  margin: 10px 0
